--- a/bereiche.html
+++ b/bereiche.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang='de'>
-  <head>
+<head>
     <meta charset='UTF-8'>
     <title>LU02.A01 - Bereiche einsetzen</title>
     <link rel='stylesheet' href='bereiche.css'>
-  </head>
-  <body>
+</head>
+<body>
+<header>
     Ich bin die Kopfzeile der Seite
-    Hier steht die Navigation
-    Der Hauptinhalt folgt hier.
-    Ich bin der erste Artikel.
-    Als Abschnitt gehöre ich zum ersten Artikel.
-    Auch ich bin ein Abschnitt.
-    Der zweite Artikel bin ich.
-    Abschnitt eins im Artikel zwei.
+    <nav>
+        Hier steht die Navigation
+    </nav>
+</header>
+<main>
+    <article>
+        Der Hauptinhalt folgt hier.
+        <section>
+            Ich bin der erste Artikel.
+
+        </section>
+        <section>
+            Als Abschnitt gehöre ich zum ersten Artikel.
+            Auch ich bin ein Abschnitt.
+        </section>
+        Der zweite Artikel bin ich.
+        <section>
+            Abschnitt eins im Artikel zwei.
+        </section>
+    </article>
+</main>
+<footer>
     Die Fusszeile schliesst alles ab.
-  </body>
+</footer>
+</body>
 </html>
